<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="640dp"
              android:layout_height="360dp"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              tools:context=".MainScreen"
              android:background="#000"
        >

    <TextView
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/start"
            android:id="@+id/start"
            android:layout_gravity="center"
            android:textColor="#e0e0e0"
            android:layout_marginLeft="-23dp"
            android:textStyle="bold"
            android:typeface="sans"
            android:textSize="30dp"
            android:layout_marginBottom="-9dp"
            android:layout_marginTop="-5dp"
            android:enabled="false"
            android:editable="false" android:phoneNumber="false"/>

    <TextView
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/countStr"
            android:id="@+id/countStr"
            android:layout_gravity="center_vertical"
            android:textColor="#e0e0e0"
            android:layout_marginLeft="60dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/rateStr"
            android:id="@+id/rateStr"
            android:layout_gravity="center"
            android:textColor="#e0e0e0"
            android:layout_marginLeft="-67dp"
            android:layout_marginTop="-60dp" android:layout_marginRight="-36dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:inputType="number"
            android:id="@+id/countVal"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="42dp"
            android:textColor="#ffffff"
            android:textSize="60sp"
            android:layout_marginBottom="-104dp"
            android:layout_marginTop="8dp"
            android:typeface="sans"
            android:layout_weight="1"
            android:text="@string/countVal" android:editable="true" android:password="false"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:text="@string/swipe"
            android:id="@+id/instruction" android:textColor="#ffffff" android:textSize="12sp"
            android:textStyle="italic" android:layout_gravity="center" android:layout_marginLeft="-92dp"
            android:layout_marginTop="-5dp"/>
    <TextView
            android:layout_width="116dp"
            android:layout_height="0dp"
            android:id="@+id/rate"
            android:layout_gravity="center"
            android:layout_marginLeft="-36dp"
            android:textColor="#ffffff"
            android:textSize="60sp"
            android:layout_marginBottom="-58dp"
            android:layout_marginTop="-99dp"
            android:typeface="sans"
            android:layout_weight="0.48"
            android:layout_marginRight="-4dp" android:editable="true" android:text="@string/rate" android:clickable="false"
            android:inputType="numberDecimal"/>

</LinearLayout>